package com.lado.app.Model.Tamagotchi;

public class Cat extends Tamagotchi {

  public Cat(String name) {
    super(name);
    this.breed = "Cat";
    this.favoriteFoods[0] = "Fish";
  }
}
