package com.lado.app.Model.Tamagotchi;

public class Robot extends Tamagotchi {

  public Robot(String name) {
    super(name);
    this.breed = "Robot";
    this.favoriteFoods[0] = "screw";
  }
}
