package com.lado.app.View.UIPackage;

import javax.swing.JFrame;

public abstract class Window extends JFrame {}
